tests/miz/pass/types/pass_type_elaboration_reserved_object_variable_inequality_001.miz
reserve x for object;
theorem ReservedObjectVariableInequalityPayloadBoundary: x <> x;
