tests/miz/fail/parser/fail_parser_formula_missing_holds_001.miz
theorem MissingHolds: for x holds;
